--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -196,7 +196,8 @@
           miniscule, but as their project generates profits, they can change the reward
           to increase the value of their brand. Bitpieces differs from most systems in 
           that rewards are continuous; from the moment pieces are purchased, they start
-          generating <a href="#how_are_rewards_calculated">rewards</a>. There are no specific dates at which rewards are payed out, 
+          generating <a href="#how_are_rewards_calculated">rewards</a>, in their funders accounts, automatically. 
+          There are no specific dates at which rewards are payed out, 
           they build in your account and can be withdrawn at any time.
           <hr class="col-md-12">
         </div>
