--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -420,7 +420,7 @@
             <h2 class="">How safe is Bitpieces?</h2>
             Bitpieces is still considered to be at a beta safety-level, but here are our 
             <a href="#how_do_i_know_if_a_creator_is_safe">5 pillars of security</a>. To test Bitpieces 
-            in a no-money, completely risk-free testing environment, head over to our <a href="#">test site</a>, 
+            in a no-money, completely risk-free testing environment, head over to our <a href="http://test.bitpieces.com">test site</a>, 
             where you can simulate user and creator accounts, with no real money involved.
             <hr class="col-md-12">
           </div>
