--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -186,7 +186,7 @@
 
             <i class="fa fa-pencil-square-o fa-5x"></i>
             <h2>Register</h2>
-            <p>Signing up is quick, easy, and free. <a href="/discover">Discover</a> the <a href="/FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="#">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>.
+            <p>Signing up is quick, easy, and free. <a href="/discover">Discover</a> the <a href="/FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="http://test.bitpieces.com">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>.
             </p>
             <p><a class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
