--- a/resources/testweb/about.html
+++ b/resources/testweb/about.html
@@ -149,14 +149,16 @@
      <div class="row">
        <div class="col-md-12">
        <h2 class="featurette-heading">Team </h2>
-         Once this project picks up, I plan to hire a team, but for right now its just me, Tyler Houlihan. About me: I'm a software developer with severals years of experience in the financial services industry, and in the defense industry. I'm interested in bitcoin, reddit, reading, and making music (piano, guitar, ableton live). The idea for this project originally came to me out of an intense desire to quit my job and work on my music full-time. 
+         Once this project picks up, I plan to hire a team, but for right now its just me, Tyler Houlihan. 
+         <br><br>
+         About me: I'm a software developer with several years of experience in the financial services industry, and in defense. I'm interested in bitcoin, reddit, reading, and making music (piano, guitar, ableton live). The idea for this project originally came to me out of an intense desire to quit my job and work on my music full-time, so you could say that Bitpieces was designed with musicians in mind. 
          <br><br>
          <img class="featurette-image img-responsive" src="img/profile.jpg" alt="Generic placeholder image">
 
          <a href="https://github.com/tchoulihan/">github</a>
          <a href="https://www.facebook.com/tyler.houlihan">facebook</a>
          <a href="https://www.google.com/+TylerHoulihan">google plus</a>
-         <a href="https://hrtc.co">Heretic</a> 
+         <a href="http://hrtc.co">Heretic</a> 
 
 
 
