--- a/resources/testweb/about.html
+++ b/resources/testweb/about.html
@@ -145,6 +145,7 @@
 
        </div>
      </div>
+     <hr>
 
      <div class="row">
        <div class="col-md-12">
@@ -158,9 +159,7 @@
          <a href="https://github.com/tchoulihan/">github</a>
          <a href="https://www.facebook.com/tyler.houlihan">facebook</a>
          <a href="https://www.google.com/+TylerHoulihan">google plus</a>
-         <a href="http://hrtc.co">Heretic</a> 
-
-
+         <a href="http://hrtc.co">heretic</a> 
 
        </div>
      </div>
