--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -182,6 +182,7 @@
         <hr>
         <!-- Three columns of text below the carousel -->
         <div class="row">
+        <h2 class="featurette-heading">How does <span class="text-muted">Bitpieces</span> work? </h2>
           <div class="col-lg-4">
 
             <i class="fa fa-pencil-square-o fa-5x"></i>
