--- a/resources/testweb/creator_pieces.html
+++ b/resources/testweb/creator_pieces.html
@@ -689,6 +689,8 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">withdraw</h4>
       </div>
       <div class="modal-body">
+      Make sure your creator safety after withdrawal doesn't go below 5, or you will be labeled as <b> Unsafe </b>
+      <br>
         <form id="withdrawForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
