--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -405,7 +405,7 @@
 </div>
 </div>
 <button id="takeMeHomeBtn" type="submit" class="btn btn-primary"
-        >Take me to my page</button>
+>Take me to my page</button>
 </div>
 
 
@@ -414,7 +414,33 @@
 </div>
 
 <!-- Modals -->
+<div id="creatorDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
 
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Disclaimer</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         <ul>
+          <li>The fee for using Bitpieces is 5% of every withdrawal of funds raised. </li>
+          <li>Bitpieces does not guarantee that the pieces you issue will be purchased.</li>
+          <li>You are liable to your funders for the rewards that you issue.</li>
+          <li>Selling pieces is a contract between you and your potential funders, and you may be liable to your funders for the initial value of the pieces you have sold to them, if you do not provide the rewards which were promised.</li>
+          <li>
+          </ul>
+        </div>
+
+
+      </div> 
+      <div class="modal-footer">
+       <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     </div>
+
+   </div>
+ </div>
+</div>
 
 
 
