--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -527,14 +527,21 @@
       </div>
       <div class="modal-body">
         <div class="text">
-         blah blah blah, a disclaimer
-       </div>
+         <ul>
+          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from https://bitcoinaverage.com/ </li>
+          <li>Bitpieces does not guarantee the value of your pieces. </li>
+          <li>Bitpieces does not guarantee that a creator has the funds to pay rewards. Buying pieces is a contract between you and the creator. Read about creator safety 
+          <a href='/FAQ#how_do_i_know_if_a_creator_is_safe'>here</a>. </li>
+          <li>Legal action must be taken against the creator directly, if they fail to provide you with rewards, or if the value of their pieces decreases dramatically. </li>
+          <li> Your bitcoin wallet may charge you a small fee for making a deposit </li>
+        </ul>
+      </div>
 
 
-     </div> 
-     <div class="modal-footer">
-       <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
-     </div>
+    </div> 
+    <div class="modal-footer">
+     <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+   </div>
 
    </div>
  </div>
