Added creator and user disclaimers. not legalese.

--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -409,7 +409,7 @@
       <div class="modal-body">
         <div class="text">
          <ul>
-          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from https://bitcoinaverage.com/ </li>
+          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from <a href="https://bitcoinaverage.com">https://bitcoinaverage.com</a> </li>
           <li>Bitpieces does not guarantee the value of your pieces. </li>
           <li>Bitpieces does not guarantee that a creator has the funds to pay rewards. Buying pieces is a contract between you and the creator. Read about creator safety 
           <a href='/FAQ#how_do_i_know_if_a_creator_is_safe'>here</a>. </li>
