--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -285,7 +285,7 @@
             <li>
               <h3> Mandatory rewards</h3>
               One of the oddities of Bitpieces, is in this question: If a creator is trying to raise money, 
-              then why should they be forced to reward their creators right away?
+              then why should they be forced to reward their funders right away?
               <br><br>
               The answer is this: security. Rewards, no matter how miniscule the amount, help to establish 
               a <a href="#why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
