--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -227,7 +227,7 @@
 
 
 
-          <hr>
+          <hr class="featurette-divider">
 
           <div id="fund_creativity" class="row featurette">
             <div class="col-md-5">
