--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -189,14 +189,14 @@
 
             <i class="fa fa-pencil-square-o fa-5x"></i>
             <h2>Register</h2>
-            <p>Signing up is quick, easy, and free. <a href="/discover">Discover</a> the <a href="/FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="http://test.bitpieces.com">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>.
+            <p>Signing up is quick, easy, and free. <a href="/discover">Discover</a> the <a href="/FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="http://test.bitpieces.com">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>. If you're a content-creator looking to raise some funds for your project, register <a href="/creators_register">here</a>.
             </p>
            
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <i class="fa fa-btc fa-5x"></i>
             <h2>Buy pieces</h2>
-            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces <b>automatically and continuously</b>  earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users if they choose. </p>
+            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces <b>automatically and continuously</b>  earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users on an open marketplace. </p>
             
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
