--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -279,6 +279,50 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Bids and Asks</h3>
+      </div>
+      <div id="bids_asks" class="panel-body" style="height: 276px;overflow:auto;">
+        <script id="bids_asks_template" type="x-tmpl-mustache"> 
+          <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Time <i class="fa fa-sort"></i></th>
+                <th>User <i class="fa fa-sort"></th>
+                <th>Type <i class="fa fa-sort"></th>
+                <th>Pieces <i class="fa fa-sort"></th>
+                <th>Price per piece<i class="fa fa-sort"></th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+              {{#.}}
+
+              <tr> 
+                <td>{{time_}}</td>
+                <td><a href="/users/overview/{{users_name}}">{{users_name}}</a></td>
+                <td>{{type}}</td>
+                <td>{{pieces}}</td>
+                <td>{{price_per_piece}}</td>
+              </tr>
+              {{/.}}
+
+            </tbody>
+          </script>
+        </table>
+
+      </div>
+      <div class="panel-footer">
+        <ul class="pager">
+          <li id="bids_asks_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="bids_asks_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   </div>
 
   <!-- FOOTER -->
